compiler/testData/diagnostics/tests/sealed/NeverOpen.kt
<!INCOMPATIBLE_MODIFIERS!>open<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}